# Token-Dashboard

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.json  DESIGN.md  LICENSE  README.md  TODO.md  cli.js  cli.py  deny.toml  dev.py  package-lock.json  package.json  pyproject.toml  run.bat  run.sh  rustfmt.toml  token-dashboard.spec
.github/workflows/: enforce-main-source.yml  frontend-tests.yml  release-tauri.yml  release.legacy.yml.disabled  release.yml  rust.yml  sync-main-to-develop.yml
Casks/: token-dashboard.rb
crates/praetorium-core/: Cargo.toml
crates/token-dashboard-cli/: Cargo.toml  openapi.json
crates/token-dashboard-cli/src/: errors.rs  lib.rs  main.rs  oauth.rs  remote_sync.rs  routes.rs  scan.rs  sse.rs  state.rs  util.rs
crates/token-dashboard-cli/tests/: endpoints.rs
crates/token-dashboard-core/: Cargo.toml  README.md  pricing.json
crates/token-dashboard-core/examples/: parity.rs  perf_probe.rs
crates/token-dashboard-core/src/: anomaly.rs  anthropic_sync.rs  auto_tags.rs  budget_alerts.rs  budget_history.rs  budget_projects.rs  burn_rate.rs  cache_stats.rs  credentials.rs  day.rs  db.rs  lib.rs  limits.rs  loop_detector.rs  model_efficiency.rs  preferences.rs  pricing.rs  queries.rs  remote_sources.rs  scanner.rs  skills_catalog.rs  sources.rs  sync_snapshot.rs  tips.rs  tool_costs.rs  verbosity.rs
crates/token-dashboard-core/src/providers/: claude.rs  codex.rs  mod.rs
crates/token-dashboard-core/tests/: activity_heatmap.rs  codex_provider.rs  db_init.rs  dedup.rs  parse.rs  power_level.rs  providers.rs  rescan.rs  tag_aggregates.rs
crates/token-dashboard-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/token-dashboard-tauri/capabilities/: default.json
crates/token-dashboard-tauri/frontend-stub/: index.html
crates/token-dashboard-tauri/icons/: icon.icns
crates/token-dashboard-tauri/permissions/autogenerated/: app_cwd.toml  close_live_window.toml  close_widget.toml  is_live_window_open.toml  is_widget_open.toml  list_all_sessions.toml  list_live_sessions.toml  open_live_window.toml  open_setup_help.toml  open_widget.toml  read_session.toml  read_vault_file.toml  run_claude.toml  set_glass.toml  show_main.toml  show_main_route.toml  stop_claude.toml  vault_index.toml  vault_links.toml  watch_sessions.toml
crates/token-dashboard-tauri/src/: main.rs
crates/token-dashboard-tauri/src/live/: mod.rs  process.rs  session_watch.rs
docs/: API_CONTRACT.md  CODEX_PROVIDER.md  DESIGN.json  DESIGN.md  DEVELOPMENT.md  KNOWN_LIMITATIONS.md  MULTI_PROVIDER_PLAN.md  PRODUCT.md  PUBLISHING_CRATES_IO.md  ROADMAP.md  V4_RUST_TAURI_PLAN.md  V5_PRAETORIUM_MERGE_PLAN.md  code-quality-audit.md  incremental-deltas-todo.md
docs/plans/: 2026-05-09-sse-hint-driven-refetch.md
docs/promo/: compare.md  launch.md
docs/specs/: 2026-05-09-sse-incremental-deltas-design.md
docs/superpowers/plans/: 2026-05-09-user-set-limit-resets.md
docs/superpowers/specs/: 2026-05-09-user-set-limit-resets-design.md
docs/todo/: 01-burn-rate-projection.md  02-monthly-budget-alerts.md  03-cost-per-feature-tagging.md  04-cache-hit-rate-sparkline.md  05-model-efficiency-leaderboard.md  06-prompt-verbosity-detector.md  07-subagent-roi.md  08-tool-cost-attribution.md  09-retry-loop-detection.md  10-export-csv-parquet.md  11-multi-machine-sync.md  12-week-over-week-diff.md  13-anomaly-alerts.md  14-os-notifications.md  15-budget-tab.md  README.md
electron/: README.md  main.js  package-lock.json  package.json  preload.js
electron/build-resources/: icon.icns
electron/scripts/: ad-hoc-sign.js  gen-icon.py  prepare-py.py
electron/src/: backend.js  sse-client.js  tray.js  window.js
frontend/: data.js  direction-a.jsx  entry.jsx  index.html  live.css  package-lock.json  package.json  styles.css  widget.html
frontend/src/: api-client.js  app.jsx  clipboard.js  data-store.js  format.js  fx-pref.js  levels.js  levels.node-test.mjs  nav-items.js  nav-items.node-test.mjs  project-name.js  setup-help.jsx  sse-dispatch.js  sse-dispatch.node-test.mjs  sse-dispatch.test.html  tauri-window.js  tauri-window.node-test.mjs  theme.js  themed-copy.js  use-advanced-mode.js  use-power-level.js  widget.jsx
frontend/src/components/: ambient-canvas.jsx  atoms.jsx  charts.jsx  count-up.jsx  date-input.jsx  nav-rail.jsx  sortable.jsx  special-chrome.jsx  topbar.jsx  window-resize-handles.jsx
frontend/src/live/: index.jsx
frontend/src/routes/: api.jsx  budget.jsx  cache.jsx  calendar.jsx  overview.jsx  prompts.jsx  sessions.jsx  settings.jsx  tags.jsx  tips.jsx  work.jsx
packaging/scoop/: README.md  token-dashboard.json
scripts/: install.ps1  install.sh  screenshot.mjs  snap-window.ps1
shared/: api-contract.json  format.js
src/: db.js  paths.js  pricing.js  scanner.js  server.js  skills.js  tips.js
test/: _helpers.js  cli.test.js  db.test.js  end_to_end_totals.test.js  pricing.test.js  queries.test.js  scanner_dedup.test.js  scanner_parse.test.js  scanner_rescan.test.js  scanner_walk.test.js  server.test.js  skills.test.js  tips.test.js
tests/: test_anthropic_sync.py  test_pricing.py  test_queries.py  test_scan_loop_event.py  test_scanner_manifest.py  test_server.py  test_sources.py  test_tips.py
token_dashboard/: __main__.py  anthropic_sync.py  preferences.py  pricing.json  pricing.py  reloader.py  scanner.py  server.py  tips.py
token_dashboard/db/: __init__.py  projects.py  queries.py  schema.py  sources.py
token_dashboard/server/: __init__.py  http_utils.py  routes.py  scan_loop.py  sse.py
token_dashboard/server/endpoints/: __init__.py  budget.py  data.py  io.py  pricing.py  sources.py  state.py
token_dashboard/web/: a-styles.css  app.js  charts.js  data.js  direction-a.jsx  index.html  style.css
token_dashboard/web/charts/: theme.js
token_dashboard/web/core/: api.js  dom.js  format.js  router.js  settings.js  shell.js  states.js
token_dashboard/web/routes/: overview.js  prompts.js  sessions.js  settings.js  skills.js  tips.js
web/: app.js  style.css
web/routes/: prompts.js  sessions.js  tips.js
(+30 files in other folders)
