[workspace]
members = [
    "crates/token-dashboard-core",
    "crates/token-dashboard-cli",
    "crates/token-dashboard-tauri",
    "crates/praetorium-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Arylmera/Token-Dashboard"
authors = ["Arylmera <guillaume@lemer.be>"]
homepage = "https://github.com/Arylmera/Token-Dashboard"
rust-version = "1.82"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "allow"
print_stderr = "allow"
# Promote these to "warn" in a follow-up after a sweep:
# unwrap_used = "warn"
# expect_used = "warn"
