[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "token-dashboard"
version = "0.1.0"
description = "Local dashboard for Claude Code token usage, costs, and session history."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Token Dashboard contributors" }]
keywords = ["claude", "claude-code", "tokens", "dashboard", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Arylmera/Token-Dashboard"
Repository = "https://github.com/Arylmera/Token-Dashboard"
Issues = "https://github.com/Arylmera/Token-Dashboard/issues"

[project.scripts]
token-dashboard = "token_dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["token_dashboard"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "token_dashboard/_frontend"
"shared" = "token_dashboard/_shared"
"VERSION" = "token_dashboard/_VERSION"

[tool.hatch.build.targets.sdist]
include = [
    "token_dashboard",
    "frontend",
    "shared",
    "electron",
    "tests",
    "cli.py",
    "run.sh",
    "run.bat",
    "VERSION",
    "README.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "docs",
]
