[package]
name = "praetorium-core"
version = "5.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Parser and vault library backing Token Dashboard's Live session view (ported from Praetorium)."
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
