[package]
name = "token-dashboard-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Token Dashboard 4.0 headless HTTP server (axum + tokio)"

[[bin]]
name = "token-dashboard"
path = "src/main.rs"

[dependencies]
token-dashboard-core = { path = "../token-dashboard-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
hyper = "1"
