[package]
name = "token-dashboard-cli"
version = "4.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Token Dashboard 4.0 headless HTTP server (axum + tokio)"
publish = false

[[bin]]
name = "token-dashboard"
path = "src/main.rs"

[dependencies]
token-dashboard-core = { path = "../token-dashboard-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
hyper = "1"

[lints]
workspace = true
