[package]
name = "token-dashboard-core"
version = "4.0.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Scanner, sqlite store, pricing, and analytics for Claude Code JSONL session transcripts."
documentation = "https://docs.rs/token-dashboard-core"
readme = "README.md"
keywords = ["claude", "tokens", "analytics", "anthropic", "telemetry"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
include = [
    "src/**/*.rs",
    "pricing.json",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
ureq = { version = "2.10", features = ["json"], optional = true }

[features]
default = ["http"]
http = ["dep:ureq"]

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
